--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="js/bower_components/backbone-relational/backbone-relational.js"></script>
     <script src="js/bower_components/knockout/dist/knockout.js"></script>
     <!-- <script src="script.js"></script> -->
-    <script src="random.js"></script>
-    <!-- <script src="test.js"></script> -->
+    <!-- <script src="random.js"></script> -->
+    <script src="test.js"></script>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
 </head>
