--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <script src="js/bower_components/backbone/backbone.js"></script>
     <script src="js/bower_components/backbone-relational/backbone-relational.js"></script>
     <script src="js/bower_components/knockout/dist/knockout.js"></script>
-    <!-- <script src="script.js"></script> -->
-    <!-- <script src="random.js"></script> -->
-    <script src="test.js"></script>
+    <script src="scripts.js"></script>
+    <!-- <script src="this.js"></script> -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
 </head>
 <body>
-    
+    <!-- <h1>backbone testing</h1> -->
+    <div id="output"></div>
 </body>
 </html>
