--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <script src="js/bower_components/backbone/backbone.js"></script>
     <script src="js/bower_components/backbone-relational/backbone-relational.js"></script>
     <script src="js/bower_components/knockout/dist/knockout.js"></script>
-    <script src="scripts.js"></script>
-    <!-- <script src="this.js"></script> -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <!-- <script src="scripts.js"></script> -->
+    <script src="another.js"></script>
 
 </head>
 <body>
-    <!-- <h1>backbone testing</h1> -->
     <div id="output"></div>
 </body>
 </html>
