Added another file

--- a/test.html
+++ b/test.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Script</title>
+    <title>Another</title>
     <script src="js/bower_components/jquery/dist/jquery.js"></script>
     <script src="js/bower_components/underscore/underscore-umd.js"></script>
     <script src="js/bower_components/backbone/backbone.js"></script>
     <script src="js/bower_components/backbone-relational/backbone-relational.js"></script>
-    <!-- <script src="backbone-relational-link.js"></script> -->
-    <script src="js/bower_components/knockout/dist/knockout.js"></script>
+    <script src="another.js"></script>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <script src="scripts.js"></script>
-    <!-- <script src="test.js"></script> -->
+
 </head>
 <body>
-    <div id="output"></div>
+    
 </body>
 </html>
