--- a/test.html
+++ b/test.html
@@ -8,7 +8,8 @@
     <script src="js/bower_components/underscore/underscore-umd.js"></script>
     <script src="js/bower_components/backbone/backbone.js"></script>
     <script src="js/bower_components/backbone-relational/backbone-relational.js"></script>
-    <script src="another.js"></script>
+    <!-- <script src="another.js"></script> -->
+    <script src="madePrivate.js"></script>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
 </head>
