Made some changes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <script src="js/bower_components/jquery/dist/jquery.js"></script>
     <script src="js/bower_components/underscore/underscore-umd.js"></script>
     <script src="js/bower_components/backbone/backbone.js"></script> 
-    <script src="bower_components/backbone-relational/backbone-relational.js"></script>
+    <script src="js/bower_components/backbone-relational/backbone-relational.js"></script>
+    <!-- <script src="js/require.js"></script> -->
+
     <!-- <script src="scripts.js"></script> -->
     <!-- <script src="madePrivate.js"></script> -->
-    <!-- <script src="test.js"></script> -->
+    <script src="test.js"></script>
     <!-- <script type="module" src="guidMixin.js"></script>
     <script type="module" src="PlanScenarioMixin.js"></script>
     <script type="module" src="PlanScenario.js"></script> -->
