--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
     <!-- <script src="scripts.js"></script> -->
     <!-- <script src="madePrivate.js"></script> -->
-    <script src="test.js"></script>
+    <script src="main.js" type="module"></script>
     <!-- <script type="module" src="guidMixin.js"></script>
-    <script type="module" src="PlanScenarioMixin.js"></script>
-    <script type="module" src="PlanScenario.js"></script> -->
+    <script type="module" src="PlanScenarioMixin.js"></script> -->
+
+    
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
 </head>
