--- a/another.html
+++ b/another.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Backbone</title>
+    <title>Backbone1</title>
     <script src="js/bower_components/jquery/dist/jquery.js"></script>
     <script src="js/bower_components/underscore/underscore-umd.js"></script>
     <script src="js/bower_components/backbone/backbone.js"></script> 
     <script src="js/bower_components/backbone-relational/backbone-relational.js"></script>
     <!-- <script src="js/require.js"></script> -->
-    <script src="main.js" type="module"></script>
-    <!-- <script src="scripts.js"></script> -->
+    <!-- <script src="main.js" type="module"></script> -->
+    <script src="scripts.js"></script>
     <!-- <script src="PlanScenarioMixin.js"></script> -->
     <!-- <script src="first.js"></script> -->
 
