--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Backbone</title>
+    <title>Models</title>
     <script src="js/bower_components/jquery/dist/jquery.js"></script>
     <script src="js/bower_components/underscore/underscore-umd.js"></script>
     <script src="js/bower_components/backbone/backbone.js"></script> 
